@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+socket/request.c: Properly check input read from client socket.
+Andreas Kirschbaum 2008-11-18
+
 Tentative fix for bug #1982043: Ruggilli immolation.
  server/disease.c: don't remove god-diven diseases.
 Nicolas Weeger 2008-11-11
